tests/baselines/reference/useSharedArrayBuffer2(target=es2015).errors.txt
useSharedArrayBuffer2.ts(1,16): error TS2583: Cannot find name 'SharedArrayBuffer'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2017' or later.


==== useSharedArrayBuffer2.ts (1 errors) ====
    var foge = new SharedArrayBuffer(1024);
                   ~~~~~~~~~~~~~~~~~
!!! error TS2583: Cannot find name 'SharedArrayBuffer'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2017' or later.
    var bar = foge.slice(1, 10);
    var len = foge.byteLength;